test_fm/_test24.ref
Error: overriding method 'x' changes visibility in '_test24.nj' on line 6
