test_fm/_test24.nj
//
// overriding method changes visibility
//

class Aux extends Main {
  public Integer x() {
  }
}

public class Main extends Object {
  Integer x() {
  }
}
